--- a/sites/all/themes/mav/sass/pages/home.scss
+++ b/sites/all/themes/mav/sass/pages/home.scss
@@ -204,64 +204,68 @@
   }
 }
 
-.block--home-mavericks .entity-bean
+.block--home-mavericks
 {
   clear: both;
-  box-sizing: border-box;
-  padding: 12% 25px;
-  color: white;
-  position: relative;
-  text-shadow: 0px 2px 2px black;
 
-  a
+  .entity-bean
   {
+    box-sizing: border-box;
+    padding: 12% 25px;
     color: white;
-    text-decoration: underline;
-  }
-  .block-title
-  {
-    font-size: 2.5em;
-    font-weight: 700;
-    margin-bottom: 0.5em;
-    line-height: 1;
-  }
-  & > div
-  {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  .content
-  {
-    max-width: 380px;
-  }
-  &
-  {
-    @media (max-width: 760px)
-    {
-      background: white !important;
-      text-shadow: none;
-      padding: 300px 25px 0 25px;
-      padding: 80vw 25px 25px 25px;
+    position: relative;
+    text-shadow: 0px 2px 2px black;
 
-      .content
+    a
+    {
+      color: white;
+      text-decoration: underline;
+    }
+    .block-title
+    {
+      font-size: 2.5em;
+      font-weight: 700;
+      margin-bottom: 0.5em;
+      line-height: 1;
+    }
+    & > div
+    {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .content
+    {
+      max-width: 380px;
+    }
+    &
+    {
+      @media (max-width: 760px)
       {
-        margin: 0 auto;
-        padding: 25px 25px;
-        background: black;
-        position: relative;
-        z-index: 1;
-      }
-      .responsive-image
-      {
-        background-repeat: no-repeat;
-        background-position: 75% center;
-        background-size: cover;
-        padding-bottom: 440px;
-        padding-bottom: 100vw;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
+        background: white !important;
+        text-shadow: none;
+        padding: 300px 25px 0 25px;
+        padding: 80vw 25px 25px 25px;
+
+        .content
+        {
+          margin: 0 auto;
+          padding: 25px 25px;
+          background: black;
+          position: relative;
+          z-index: 1;
+        }
+        .responsive-image
+        {
+          background-repeat: no-repeat;
+          background-position: 75% center;
+          background-size: cover;
+          padding-bottom: 440px;
+          padding-bottom: 100vw;
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+        }
       }
     }
   }
